--- a/onlyflansProject/web/templates/about.html
+++ b/onlyflansProject/web/templates/about.html
@@ -1,7 +1,23 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block content %}
-<div class="container-fluid">
-    acerca
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-12">
+            <h1 class="text-center mb-4">Bienvenido a OnlyFlans</h1>
+            <p class="lead text-center fs-4">Tu destino para disfrutar de exquisitos pasteles y postres, con un enfoque especial en el famoso flan.</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8 offset-md-2">
+            <p class="fs-5">Fundada en 2021 en Santiago de Chile como una empresa familiar, OnlyFlans se encuentra estratégicamente ubicada en Providencia, a pasos del metro Parque Bustamante.</p>
+            <p class="fs-5">OnlyFlans se distingue por su compromiso con la calidad y la satisfacción del cliente. Como una PYME de reciente creación, nos dedicamos a ofrecer productos de pastelería artesanales que deleitan a nuestros clientes con cada bocado. Nuestra misión es destacar como una empresa seria y confiable en el mercado, proporcionando tanto productos estándar de venta pública como exclusivos para nuestros clientes registrados.</p>
+            <p class="fs-5">En nuestro sitio web, encontrarás una selección variada de productos de pastelería, destacando nuestro delicioso flan en diferentes sabores y presentaciones. Además, reservamos productos especiales y ofertas exclusivas para aquellos que se registren en nuestra plataforma, buscando no solo captar nuevos clientes, sino también cultivar relaciones duraderas con nuestros clientes habituales.</p>
+            <p class="fs-5">Estamos comprometidos con la innovación y el crecimiento futuro, considerando expandir nuestros servicios para incluir la venta en línea y otras características que mejoren la experiencia del cliente. Explora nuestro sitio web para descubrir nuestros sabores únicos y únete a la comunidad de OnlyFlans.</p>
+        </div>
+    </div>
 </div>
 {% endblock %}
+
+
+
