--- a/onlyflansProject/web/templates/base.html
+++ b/onlyflansProject/web/templates/base.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenido a onlyflans</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
-<body>
+<body class="d-flex flex-column min-vh-100">
     {% include "header.html" %}
     {% include "navbar.html" %}
-    <main>
-        {% block content %}main{% endblock %}
+    <main class="flex-grow-1">
+        {% block content %}{% endblock %}
     </main>
     {% include "footer.html" %}
     <script src="https://kit.fontawesome.com/e7918f9b97.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
