--- a/onlyflansProject/web/templates/index.html
+++ b/onlyflansProject/web/templates/index.html
@@ -1,7 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-fluid">
-    índice
+<div class="container">
+    <div class="row justify-content-center text-center">
+        {% for flan in flanes_publicos %}
+        <div class="col-sm-3">
+            <div class="card text-bg-light mb-3 shadow-lg" style="width: 18rem;">
+                <img src="{{flan.image_url}}" class="card-img-top" alt="Flan">
+                <div class="card-body">
+                  <h5 class="card-title">{{flan.name}}</h5>
+                  <p class="card-text">{{flan.description}}</p>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 </div>
+
 {% endblock %}
