--- a/onlyflansProject/web/templates/navbar.html
+++ b/onlyflansProject/web/templates/navbar.html
@@ -14,6 +14,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./acerca">Acerca</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./contacto">Contacto</a>
+                </li>
             </ul>
         </div>
     </div>
