--- a/onlyflansProject/web/templates/welcome.html
+++ b/onlyflansProject/web/templates/welcome.html
@@ -1,7 +1,24 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-fluid">
-    bienvenido cliente
+<div class="col-12 col-md-6 offset-0 offset-md-3 mt-4 mb-4">
+    <h3 class="text-center">Bienvenido Cliente</h3>
 </div>
+
+<div class="container">
+    <div class="row justify-content-center text-center">
+        {% for flan in flanes_privados %}
+        <div class="col-sm-3">
+            <div class="card text-bg-light mb-3 shadow-lg" style="width: 18rem;">
+                <img src="{{flan.image_url}}" class="card-img-top" alt="Flan">
+                <div class="card-body">
+                  <h5 class="card-title">{{flan.name}}</h5>
+                  <p class="card-text">{{flan.description}}</p>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+
 {% endblock %}
