--- a/onlyflansProject/web/templates/index.html
+++ b/onlyflansProject/web/templates/index.html
@@ -1,20 +1,25 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
-    <div class="row justify-content-center text-center">
-        {% for flan in flanes_publicos %}
-        <div class="col-sm-3">
-            <div class="card text-bg-light mb-3 shadow-lg" style="width: 18rem;">
-                <img src="{{flan.image_url}}" class="card-img-top" alt="Flan">
-                <div class="card-body">
-                  <h5 class="card-title">{{flan.name}}</h5>
-                  <p class="card-text">{{flan.description}}</p>
-                </div>
-            </div>
-        </div>
-        {% endfor %}
-    </div>
-</div>
+  <div class="col-12 col-md-6 offset-0 offset-md-3 mt-4 mb-4">
+    <h3 class="text-center">El palacio de los flanes</h3>
+  </div>
 
+  <div class="container">
+    <div class="row justify-content-center text-center">
+      {% for flan in flanes_publicos %}
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-3">
+          <div class="card text-bg-light shadow-lg h-100">
+            <img src="{{ flan.image_url }}" class="card-img-top" alt="Flan" style="height: 200px;" />
+            <div class="card-body">
+              <h5 class="card-title">{{ flan.name }}</h5>
+              <h6 class="card-subtitle mb-2 text-muted">${{ flan.price }} CLP</h6>
+              <p class="card-text">{{ flan.description }}</p>
+            </div>
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+  </div>
 {% endblock %}
+
